[package]
name = "torrent_client"
version = "0.1.0"
authors = ["feralpoosum"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.1"
urlencoding = "1.0.0"
rand = "0.7.3"
reqwest = {version = "0.10.8", features=["blocking"]}